# tauri-screen-recorder

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  screenshot.rs
