[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Abhinav Robinson"]
license = "MIT"
repository = "https://github.com/AbhinavRobinson/tauri-screen-recorder"
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "2.0.0-alpha.3", features = ["api-all"] }
scrap = "0.5.0"
repng = "0.2.2"
chrono = "0.4.23"
screenshots = "0.5.2"
core-graphics = "0.22.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
